--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,3 +33,30 @@ section#telefone {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+iframe#tela {
+  position: relative;
+  top: 81px;
+  left: 23px;
+  height: 469px;
+  width: 266px;
+}
+
+section#redes-sociais {
+  text-align: right;
+}
+
+section#redes-sociais img {
+  height: 100px;
+  padding: 10px;
+  border-radius: 50%;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.408);
+  box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+  border: 2px solid rgba(255, 255, 255, 0.664);
+  transform: translate(-3px, -3px);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.615);
+  transition: transform 0.4s, border 0.7s;
+}
