--- a/estilos/style.css
+++ b/estilos/style.css
@@ -47,6 +47,7 @@ section#redes-sociais {
 }
 
 section#redes-sociais img {
+  margin-top: 20px;
   height: 100px;
   padding: 10px;
   border-radius: 50%;
