--- a/estilos/style-home.css
+++ b/estilos/style-home.css
@@ -8,7 +8,7 @@
 body {
   height: 100vh;
   width: 100vw;
-  background: url("/imagens/celular.jpg") no-repeat top center;
+  background: url("../imagens/celular.jpg") no-repeat top center;
 
   background-size: cover;
 }
